fixed the header issue on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 }
 
 .logo {
-    margin: 0;
+    /* margin: 0; */
     will-change: filter;
     transition: filter 300ms;
 }
