--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,7 +1,3 @@
-.logo {
-    margin-inline: auto;
-}
-
 .footer {
     gap: 1.5rem;
     padding: 40px 0;
